--- a/styles.css
+++ b/styles.css
@@ -5,11 +5,11 @@ body {
     flex-direction: column;
     min-height: 100vh;
     margin: 0;
-    position: relative; 
+    position: relative;
 }
 
 .text-orange {
-    color: #ff8c42; 
+    color: #ff8c42;
 }
 
 .btn-orange {
@@ -36,7 +36,7 @@ body {
 }
 
 #headerSection.small {
-    top: 20px; 
+    top: 20px;
     transform: translateX(-50%);
     transition: all 0.5s ease;
 }
@@ -62,7 +62,8 @@ body {
     width: 100%;
     max-width: 1000px;
     height: 60vh;
-    margin-top: 15px;;
+    margin-top: 15px;
+    ;
     padding: 10px;
     background-color: #2a2a40;
     border: 1px solid #3a3a4e;
@@ -81,9 +82,11 @@ body {
     0% {
         transform: scale(1);
     }
+
     50% {
         transform: scale(1.1);
     }
+
     100% {
         transform: scale(1);
     }
@@ -93,10 +96,22 @@ body {
     animation: pulse 0.4s ease;
 }
 
+
+#loadingSpinner {
+    position: fixed;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: none;
+}
+
+.spinner-border {
+    width: 3rem;
+    height: 3rem;
+}
+
 .footer {
     background-color: #1a1a2e;
     border-top: 1px solid #3a3a4e;
     margin-top: auto;
     position: relative;
-    z-index: 10;
 }
